Mise à jour du site

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <h2 class="text-sm md:text-lg font-bold leading-tight uppercase tracking-wide">Industries Minières</h2>
 </div>
 <nav class="hidden lg:flex items-center gap-6">
-<a class="text-sm font-bold text-primary border-b-2 border-primary pb-1" href="code.html">Accueil</a>
+<a class="text-sm font-bold text-primary border-b-2 border-primary pb-1" href="index.html">Accueil</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="ministere.html">Le Ministre</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="mission.html">Missions</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="actualite.html">Actualités</a>
@@ -119,9 +119,7 @@
                             Découvrir nos Projets
                             <span class="material-symbols-outlined">arrow_forward</span>
 </button>
-<button class="bg-white/10 hover:bg-white/20 backdrop-blur-md text-white font-bold py-4 px-8 rounded-lg transition-all border border-white/20">
-                            Le Cadastre Minier
-                        </button>
+
 </div>
 </div>
 <div class="absolute bottom-10 left-1/2 -translate-x-1/2 flex gap-3">
@@ -139,20 +137,18 @@
 <div class="size-14 bg-primary/10 rounded-lg flex items-center justify-center text-primary mb-6 group-hover:bg-primary group-hover:text-white transition-all">
 <span class="material-symbols-outlined text-3xl">map</span>
 </div>
-<h3 class="text-xl font-bold mb-3">Cadastre Minier</h3>
-<p class="text-sm text-gray-500 dark:text-gray-400 leading-relaxed mb-4">Accédez à la cartographie dynamique des titres miniers et suivez la disponibilité des périmètres en temps réel.</p>
-<a class="text-primary text-sm font-bold flex items-center gap-2 hover:underline" href="carte.html">
-                            Accéder au portail <span class="material-symbols-outlined text-base">open_in_new</span>
+<h3 class="text-xl font-bold mb-3"></h3>
+<p class="text-sm text-gray-500 dark:text-gray-400 leading-relaxed mb-4">
+                             <span class="material-symbols-outlined text-base"></span>
 </a>
 </div>
 <div class="bg-white dark:bg-[#1a2e21] p-8 rounded-xl shadow-xl border border-secondary-yellow/10 group hover:border-secondary-yellow transition-colors cursor-pointer">
 <div class="size-14 bg-secondary-yellow/10 rounded-lg flex items-center justify-center text-secondary-yellow mb-6 group-hover:bg-secondary-yellow group-hover:text-white transition-all">
 <span class="material-symbols-outlined text-3xl">description</span>
 </div>
-<h3 class="text-xl font-bold mb-3">Procédures d'Octroi</h3>
-<p class="text-sm text-gray-500 dark:text-gray-400 leading-relaxed mb-4">Guide complet sur les démarches administratives pour l'obtention des permis de recherche et d'exploitation.</p>
-<a class="text-primary text-sm font-bold flex items-center gap-2 hover:underline" href="octroi.html">
-                            Consulter le guide <span class="material-symbols-outlined text-base">arrow_forward</span>
+<h3 class="text-xl font-bold mb-3"></h3>
+<p class="text-sm text-gray-500 dark:text-gray-400 leading-relaxed mb-4">
+                             <span class="material-symbols-outlined text-base"></span>
 </a>
 </div>
 <div class="bg-white dark:bg-[#1a2e21] p-8 rounded-xl shadow-xl border border-accent-red/10 group hover:border-accent-red transition-colors cursor-pointer">
@@ -185,7 +181,7 @@
 
     <!-- FER -->
     <div class="bg-white dark:bg-[#1a2e21] rounded-xl shadow-lg border border-primary/10 overflow-hidden group hover:border-primary transition-colors">
-      <img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e"
+      <img src="https://www.bing.com/th/id/OIP.UQDuZ8Uo8xTjDBJINlOiiAHaHa?w=189&h=211&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2"
            alt="Minerai de fer Congo"
            class="h-40 w-full object-cover group-hover:scale-105 transition-transform duration-500">
       <div class="p-6">
@@ -199,7 +195,7 @@
 
     <!-- POTASSE -->
     <div class="bg-white dark:bg-[#1a2e21] rounded-xl shadow-lg border border-secondary-yellow/10 overflow-hidden group hover:border-secondary-yellow transition-colors">
-      <img src="https://images.unsplash.com/photo-1626197031507-c17099753214"
+      <img src="https://www.bing.com/th/id/OIP.G4YCelST3u_dVellVkkpUwHaFk?w=226&h=211&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2"
            alt="Potasse Congo"
            class="h-40 w-full object-cover group-hover:scale-105 transition-transform duration-500">
       <div class="p-6">
@@ -213,7 +209,7 @@
 
     <!-- OR -->
     <div class="bg-white dark:bg-[#1a2e21] rounded-xl shadow-lg border border-accent-red/10 overflow-hidden group hover:border-accent-red transition-colors">
-      <img src="https://images.unsplash.com/photo-1611078489935-0cb964de46d6"
+      <img src="https://www.bing.com/th/id/OIP.M0HROBU1wJL2tCUJBRcN7wHaEK?w=336&h=211&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2"
            alt="Or artisanal Congo"
            class="h-40 w-full object-cover group-hover:scale-105 transition-transform duration-500">
       <div class="p-6">
@@ -227,7 +223,7 @@
 
     <!-- DIAMANT -->
     <div class="bg-white dark:bg-[#1a2e21] rounded-xl shadow-lg border border-primary/10 overflow-hidden group hover:border-primary transition-colors">
-      <img src="https://images.unsplash.com/photo-1609250291996-fdebe6020a8f"
+      <img src="https://www.bing.com/th/id/OIP.NABFVizy2lItbqcv3hiqRwHaEL?w=273&h=211&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2"
            alt="Diamant Congo"
            class="h-40 w-full object-cover group-hover:scale-105 transition-transform duration-500">
       <div class="p-6">
